<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/publicacion"
    android:layout_width="200dp"
    android:layout_height="280dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/infoPreviopublicacion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/fotoProducto"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desImage"
            android:scaleType="fitCenter"
            android:src="@drawable/productoprueba" />

        <TextView
            android:id="@+id/nombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/NomProducto"
            android:textColor="@color/PRINCIPAL"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/nombreNegocio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/NomTienda"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/precioProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/precio"
            android:textSize="12sp"
            android:textColor="@color/verde"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>