<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MiNegocio">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ToolbarLayouMinegociot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:liftOnScroll="true"
        android:theme="@style/Theme.BraveWoman"
        android:background="@color/white">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_DetallesNegocio"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/PRINCIPAL" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_below="@+id/ToolbarLayouMinegociot"
        android:id="@+id/SinNegocio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="30dp">
        <ImageView

            android:id="@+id/ImageCrearnegocio"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_crear_negocio"/>
        <TextView
            android:id="@+id/msjCrearNegocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ImageCrearnegocio"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/msjCrearNegocio"/>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnRegistarMiNegocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crearNegocio"
            android:layout_below="@+id/msjCrearNegocio"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ContMiNegocio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/ToolbarLayouMinegociot"
        android:visibility="gone">
        <ImageView
            android:id="@+id/baner"
            android:layout_width="match_parent"
            android:layout_height="130dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fotoPerfilNegocio"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/NomNegocio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bsnombreNegocio"
                    android:layout_alignParentStart="true"
                    android:layout_toEndOf="@+id/btnAgregarProducto"/>
                <TextView
                    android:id="@+id/DescMiNegocio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bsdescripcion"
                    android:layout_below="@+id/NomNegocio"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/btnAgregarProducto"/>
                <ImageView
                    android:id="@+id/btnAgregarProducto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_add_box"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/MiContenido"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</RelativeLayout>